# vitaTrak

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
art/img_src/: trak_bg_art.psd  trak_icon.psd  trak_start_icon.psd
art/livearea/contents/: template.xml
headers/: config.h  main.h
headers/openmpt/: playback.h
src/: main.cpp  main_simple.cpp
src/openmpt/: playback.cpp
